Fix alignment of images in action card

--- a/apps/helper-app/src/home/home.component.scss
+++ b/apps/helper-app/src/home/home.component.scss
@@ -233,7 +233,7 @@ input[type='number'] {
 
         img {
           padding: 0 $basic-spacer;
-          height: 48px;
+          width: 63px;
 
           &.arrow {
             opacity: 0.6;
